--- a/distributed.ipynb
+++ b/distributed.ipynb
@@ -25,24 +25,140 @@
     "from nnsight.toolbox.optim.lora import LORA\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from datasets import Dataset as hf_Dataset\n",
-    "from das_utils import factual_sampler"
+    "from das_utils import factual_sampler\n",
+    "\n",
+    "# If using llama 7b\n",
+    "# from huggingface_hub import notebook_login\n",
+    "# notebook_login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e290ab24-0cb3-47c4-80d0-0bea9733963c",
+   "execution_count": 4,
+   "id": "3a689a18-c5bc-4bce-9251-e5faa7182053",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bd5c6f4348f4f429d48e7936031bd0c",
+       "model_id": "621b873b148a406dab27571a8a33db65",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+       "Downloading (…)lve/main/config.json:   0%|          | 0.00/571 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce9b18998aad4b1489eaf18edd359c4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)okenizer_config.json:   0%|          | 0.00/396 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6851419b32f49529c8f549bef67d64a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/2.11M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "345b9a1a40a8478d8a72e77f3553fe96",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/99.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1fedb14f3a1c4cfa98a2b4eec7c9d888",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)model.bin.index.json:   0%|          | 0.00/42.0k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdc2f94bdd174d94855984746354a877",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b13bb728476e4f16b9a98f94ea27fafd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)l-00001-of-00002.bin:   0%|          | 0.00/9.91G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c19af83a8f845b7bb65a9773b7d24a5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)l-00002-of-00002.bin:   0%|          | 0.00/3.94G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fcf9d54cd1e44c38ab8adf495ca84534",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -50,25 +166,18 @@
     }
    ],
    "source": [
-    "from huggingface_hub import notebook_login\n",
-    "notebook_login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3a689a18-c5bc-4bce-9251-e5faa7182053",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LanguageModel('EleutherAI/pythia-2.8b', device_map=\"cuda:0\")"
+    "model = LanguageModel('EleutherAI/pythia-6.9b', device_map=\"cuda:0\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "id": "8f30c6f4-48ec-4ec2-baa1-5f15bc502cbe",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "n_tokens = 10\n",
@@ -94,7 +203,8 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "outputs_hidden": true,
+     "source_hidden": true
     }
    },
    "outputs": [
@@ -235,7 +345,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "70650317-f4ce-4786-92ca-c29452e0a415",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -271,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3e3ca1d3-43ab-410f-8b05-d43664b57476",
    "metadata": {},
    "outputs": [],
@@ -287,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f43416d7-4f02-4609-88c8-528cc42545be",
    "metadata": {},
    "outputs": [],
@@ -298,7 +412,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
+   "id": "7c373259-c166-49e1-b43d-0ca6bf1cfcf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\\n\\n### Instruction:\\nPlease say yes only if it costs between 0.25 and 5.13 dollars, otherwise no.\\n\\n### Input:\\n9.02 dollars\\n\\n### Response:\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.tokenizer.decode(raw_prealign[0][4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "657ab219-4031-4259-97ae-9a7533974719",
    "metadata": {},
    "outputs": [
@@ -312,20 +447,20 @@
     {
      "data": {
       "text/plain": [
-       "'Yes\\n\\n### Task:\\n\\n### Input'"
+       "'\\n'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with model.generate(max_new_tokens=10) as generator:\n",
-    "    with generator.invoke(batch) as invoker:\n",
+    "with model.generate(max_new_tokens=1) as generator:\n",
+    "    with generator.invoke(raw_prealign[0][4]) as invoker:\n",
     "        pass\n",
     "\n",
-    "out = generator.output[:,-10:].cpu()\n",
+    "out = generator.output[:,-1:].cpu()\n",
     "model.tokenizer.decode(out[0])"
    ]
   },
@@ -407,6 +542,72 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c15601b2-a7cb-4e4d-8988-a635090590fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_total = int(len(train_dataloader) * 3)\n",
+    "warm_up_steps = 0.1 * t_total\n",
+    "optimizer_params = []\n",
+    "for k, v in alignable.interventions.items():\n",
+    "    optimizer_params += [{'params': v[0].rotate_layer.parameters()}]\n",
+    "    optimizer_params += [{'params': v[0].intervention_boundaries, 'lr': 1e-2}]\n",
+    "optimizer = torch.optim.Adam(\n",
+    "    optimizer_params,\n",
+    "    lr=1e-3\n",
+    ")\n",
+    "scheduler = get_linear_schedule_with_warmup(\n",
+    "    optimizer, num_warmup_steps=warm_up_steps,\n",
+    "    num_training_steps=t_total\n",
+    ")\n",
+    "\n",
+    "# You can define your custom compute_metrics function.\n",
+    "def compute_metrics(eval_preds, eval_labels):\n",
+    "    total_count = 0\n",
+    "    correct_count = 0\n",
+    "    for eval_pred, eval_label in zip(eval_preds, eval_labels):\n",
+    "        actual_test_labels = eval_label[:, -1]\n",
+    "        pred_test_labels = torch.argmax(eval_pred[:, -1], dim=-1)\n",
+    "        correct_labels = (actual_test_labels==pred_test_labels)\n",
+    "        total_count += len(correct_labels)\n",
+    "        correct_count += correct_labels.sum().tolist()\n",
+    "    accuracy = round(correct_count/total_count, 2)\n",
+    "    return {\"accuracy\" : accuracy}\n",
+    "\n",
+    "epochs = 3\n",
+    "gradient_accumulation_steps = 4\n",
+    "total_step = 0\n",
+    "target_total_step = len(train_dataloader) * epochs\n",
+    "temperature_start = 50.0\n",
+    "temperature_end = 0.1\n",
+    "temperature_schedule = torch.linspace(\n",
+    "    temperature_start, temperature_end, target_total_step\n",
+    ").to(torch.bfloat16).to(\"cuda\")\n",
+    "\n",
+    "# is this correct\n",
+    "alignable.set_temperature(temperature_schedule[total_step])\n",
+    "\n",
+    "def calculate_loss(logits, labels):\n",
+    "    shift_logits = logits[..., :, :].contiguous()\n",
+    "    shift_labels = labels[..., :].contiguous()\n",
+    "    # Flatten the tokens\n",
+    "    loss_fct = CrossEntropyLoss()\n",
+    "    shift_logits = shift_logits.view(-1, alignable.model_config.vocab_size)\n",
+    "    shift_labels = shift_labels.view(-1)\n",
+    "    # Enable model parallelism\n",
+    "    shift_labels = shift_labels.to(shift_logits.device)\n",
+    "    loss = loss_fct(shift_logits, shift_labels)\n",
+    "    \n",
+    "    for k, v in alignable.interventions.items():\n",
+    "        boundary_loss = 1. * v[0].intervention_boundaries.sum()\n",
+    "    loss += boundary_loss\n",
+    "    \n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a6bb752-5aec-4fe1-8b61-da94c5028cf7",
    "metadata": {},
    "outputs": [],
    "source": []
