--- a/break_transformerlens/test.ipynb
+++ b/break_transformerlens/test.ipynb
@@ -27,10 +27,10 @@
    "source": [
     "checkpoint_index = None\n",
     "checkpoint_value = None\n",
-    "fold_ln = True\n",
+    "fold_ln = False\n",
     "device = \"cuda:0\"\n",
     "n_devices = 1\n",
-    "dtype = t.float16\n",
+    "dtype = t.float32\n",
     "default_prepend_bos = True\n",
     "\n",
     "official_model_name = \"gpt2\"\n",
@@ -80,11 +80,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from HookedTransformer import HookedTransformer\n",
+    "from UnifiedTransformer import UnifiedTransformer\n",
     "\n",
     "default_padding_side = \"right\"\n",
     "\n",
-    "model = HookedTransformer(\n",
+    "model = UnifiedTransformer(\n",
     "    cfg,\n",
     "    tokenizer,\n",
     "    move_to_device=False,\n",
@@ -94,54 +94,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "center_writing_weights = True\n",
+    "center_unembed = True\n",
+    "fold_value_biases = True\n",
+    "refactor_factored_attn_matrices = False\n",
+    "\n",
+    "model.load_and_process_state_dict(\n",
+    "    state_dict,\n",
+    "    fold_ln=False,\n",
+    "    center_writing_weights=center_writing_weights,\n",
+    "    center_unembed=center_unembed,\n",
+    "    fold_value_biases=fold_value_biases,\n",
+    "    refactor_factored_attn_matrices=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TransformerBlock(\n",
-       "  (ln1): LayerNormPre(\n",
-       "    (hook_scale): HookPoint()\n",
-       "    (hook_normalized): HookPoint()\n",
+       "UnifiedTransformer(\n",
+       "  (embed): Embed()\n",
+       "  (pos_embed): PosEmbed()\n",
+       "  (hook_pos_embed): Nneuron()\n",
+       "  (blocks): ModuleList(\n",
+       "    (0-11): 12 x TransformerBlock(\n",
+       "      (ln1): LayerNorm(\n",
+       "        (hook_scale): Nneuron()\n",
+       "        (hook_normalized): Nneuron()\n",
+       "      )\n",
+       "      (ln2): LayerNorm(\n",
+       "        (hook_scale): Nneuron()\n",
+       "        (hook_normalized): Nneuron()\n",
+       "      )\n",
+       "      (attn): Attention(\n",
+       "        (hook_k): Nneuron()\n",
+       "        (hook_q): Nneuron()\n",
+       "        (hook_v): Nneuron()\n",
+       "        (hook_z): Nneuron()\n",
+       "        (hook_attn_scores): Nneuron()\n",
+       "        (hook_pattern): Nneuron()\n",
+       "        (hook_result): Nneuron()\n",
+       "      )\n",
+       "      (mlp): MLP(\n",
+       "        (hook_pre): Nneuron()\n",
+       "        (hook_post): Nneuron()\n",
+       "      )\n",
+       "      (hook_attn_in): Nneuron()\n",
+       "      (hook_q_input): Nneuron()\n",
+       "      (hook_k_input): Nneuron()\n",
+       "      (hook_v_input): Nneuron()\n",
+       "      (hook_mlp_in): Nneuron()\n",
+       "      (hook_attn_out): Nneuron()\n",
+       "      (hook_mlp_out): Nneuron()\n",
+       "      (hook_resid_pre): Nneuron()\n",
+       "      (hook_resid_mid): Nneuron()\n",
+       "      (hook_resid_post): Nneuron()\n",
+       "    )\n",
        "  )\n",
-       "  (ln2): LayerNormPre(\n",
-       "    (hook_scale): HookPoint()\n",
-       "    (hook_normalized): HookPoint()\n",
+       "  (ln_final): LayerNorm(\n",
+       "    (hook_scale): Nneuron()\n",
+       "    (hook_normalized): Nneuron()\n",
        "  )\n",
-       "  (attn): Attention(\n",
-       "    (hook_k): HookPoint()\n",
-       "    (hook_q): HookPoint()\n",
-       "    (hook_v): HookPoint()\n",
-       "    (hook_z): HookPoint()\n",
-       "    (hook_attn_scores): HookPoint()\n",
-       "    (hook_pattern): HookPoint()\n",
-       "    (hook_result): HookPoint()\n",
-       "  )\n",
-       "  (mlp): MLP(\n",
-       "    (hook_pre): HookPoint()\n",
-       "    (hook_post): HookPoint()\n",
-       "  )\n",
-       "  (hook_attn_in): HookPoint()\n",
-       "  (hook_q_input): HookPoint()\n",
-       "  (hook_k_input): HookPoint()\n",
-       "  (hook_v_input): HookPoint()\n",
-       "  (hook_mlp_in): HookPoint()\n",
-       "  (hook_attn_out): HookPoint()\n",
-       "  (hook_mlp_out): HookPoint()\n",
-       "  (hook_resid_pre): HookPoint()\n",
-       "  (hook_resid_mid): HookPoint()\n",
-       "  (hook_resid_post): HookPoint()\n",
+       "  (unembed): Unembed()\n",
        ")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.blocks[0]"
+    "model"
    ]
   }
  ],
