--- a/break_transformerlens/test.ipynb
+++ b/break_transformerlens/test.ipynb
@@ -31,7 +31,7 @@
     "device = \"cuda:0\"\n",
     "n_devices = 1\n",
     "dtype = t.float32\n",
-    "default_prepend_bos = True\n",
+    "default_prepend_bos = False\n",
     "\n",
     "official_model_name = \"gpt2\"\n",
     "\n",
@@ -87,7 +87,7 @@
     "model = UnifiedTransformer(\n",
     "    cfg,\n",
     "    tokenizer,\n",
-    "    move_to_device=False,\n",
+    "    move_to_device=True,\n",
     "    default_padding_side=default_padding_side,\n",
     ")"
    ]
@@ -117,64 +117,88 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.device = t.device(\"cuda:0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "UnifiedTransformer(\n",
-       "  (embed): Embed()\n",
-       "  (pos_embed): PosEmbed()\n",
-       "  (hook_pos_embed): Nneuron()\n",
-       "  (blocks): ModuleList(\n",
-       "    (0-11): 12 x TransformerBlock(\n",
-       "      (ln1): LayerNorm(\n",
-       "        (hook_scale): Nneuron()\n",
-       "        (hook_normalized): Nneuron()\n",
-       "      )\n",
-       "      (ln2): LayerNorm(\n",
-       "        (hook_scale): Nneuron()\n",
-       "        (hook_normalized): Nneuron()\n",
-       "      )\n",
-       "      (attn): Attention(\n",
-       "        (hook_k): Nneuron()\n",
-       "        (hook_q): Nneuron()\n",
-       "        (hook_v): Nneuron()\n",
-       "        (hook_z): Nneuron()\n",
-       "        (hook_attn_scores): Nneuron()\n",
-       "        (hook_pattern): Nneuron()\n",
-       "        (hook_result): Nneuron()\n",
-       "      )\n",
-       "      (mlp): MLP(\n",
-       "        (hook_pre): Nneuron()\n",
-       "        (hook_post): Nneuron()\n",
-       "      )\n",
-       "      (hook_attn_in): Nneuron()\n",
-       "      (hook_q_input): Nneuron()\n",
-       "      (hook_k_input): Nneuron()\n",
-       "      (hook_v_input): Nneuron()\n",
-       "      (hook_mlp_in): Nneuron()\n",
-       "      (hook_attn_out): Nneuron()\n",
-       "      (hook_mlp_out): Nneuron()\n",
-       "      (hook_resid_pre): Nneuron()\n",
-       "      (hook_resid_mid): Nneuron()\n",
-       "      (hook_resid_post): Nneuron()\n",
-       "    )\n",
-       "  )\n",
-       "  (ln_final): LayerNorm(\n",
-       "    (hook_scale): Nneuron()\n",
-       "    (hook_normalized): Nneuron()\n",
-       "  )\n",
-       "  (unembed): Unembed()\n",
-       ")"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moving model to device:  meta\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[  198, 35143,   293,   198,   257,   262,  3504,   286,  2986]],\n",
+      "       device='cuda:0')\n",
+      "\n",
+      " Shuttlele\n",
+      " a the middle of San\n"
+     ]
     }
    ],
    "source": [
-    "model"
+    "nnsight_model = nnsight.LanguageModel(model, tokenizer=tokenizer, device_map=\"cuda:0\")\n",
+    "\n",
+    "with nnsight_model.invoke(\"The Space Needle is in the city of\") as invoker:\n",
+    "    pass\n",
+    "\n",
+    "print(invoker.output.softmax(-1).argmax(-1))\n",
+    "for t in invoker.output.softmax(-1).argmax(-1):\n",
+    "    out = tokenizer.decode(t)\n",
+    "    print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[  198, 35143,   293,   198,   257,   262,  3504,   286,  2986]],\n",
+      "       device='cuda:0')\n",
+      "\n",
+      " Shuttlele\n",
+      " a the middle of San\n"
+     ]
+    }
+   ],
+   "source": [
+    "ground_truth = nnsight.LanguageModel(\"gpt2\", device_map=\"cuda:0\")\n",
+    "\n",
+    "with ground_truth.invoke(\"The Space Needle is in the city of\") as invoker:\n",
+    "    pass\n",
+    "\n",
+    "print(invoker.output[0].softmax(-1).argmax(-1))\n",
+    "for t in invoker.output[0].softmax(-1).argmax(-1):\n",
+    "    out = tokenizer.decode(t)\n",
+    "    print(out)"
    ]
   }
  ],
