renaming and adding module tree info

--- a/break_transformerlens/test.ipynb
+++ b/break_transformerlens/test.ipynb
@@ -80,11 +80,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from UnifiedTransformer import UnifiedTransformer\n",
+    "import UnifiedTransformer\n",
     "\n",
     "default_padding_side = \"right\"\n",
     "\n",
-    "model = UnifiedTransformer(\n",
+    "model = UnifiedTransformer.UnifiedTransformer(\n",
     "    cfg,\n",
     "    tokenizer,\n",
     "    move_to_device=True,\n",
@@ -128,6 +128,56 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "UnifiedTransformer(\n",
+       "  (embed): Embed()\n",
+       "  (pos_embed): PosEmbed()\n",
+       "  (blocks): ModuleList(\n",
+       "    (0-11): 12 x TransformerBlock(\n",
+       "      (ln1): LayerNorm(\n",
+       "        (scale_factor): Nneuron(param_shape=None)\n",
+       "        (normalized): Nneuron(param_shape=None)\n",
+       "      )\n",
+       "      (ln2): LayerNorm(\n",
+       "        (scale_factor): Nneuron(param_shape=None)\n",
+       "        (normalized): Nneuron(param_shape=None)\n",
+       "      )\n",
+       "      (attn): Attention(\n",
+       "        (k): Nneuron(param_shape=None)\n",
+       "        (q): Nneuron(param_shape=None)\n",
+       "        (v): Nneuron(param_shape=None)\n",
+       "        (z): Nneuron(param_shape=None)\n",
+       "        (attn_scores): Nneuron(param_shape=None)\n",
+       "        (pattern): Nneuron(param_shape=None)\n",
+       "        (result): Nneuron(param_shape=None)\n",
+       "      )\n",
+       "      (mlp): MLP()\n",
+       "    )\n",
+       "  )\n",
+       "  (ln_final): LayerNorm(\n",
+       "    (scale_factor): Nneuron(param_shape=None)\n",
+       "    (normalized): Nneuron(param_shape=None)\n",
+       "  )\n",
+       "  (unembed): Unembed()\n",
+       ")"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -167,7 +217,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UnifiedTransformer(\n",
+       "  (embed): Embed()\n",
+       "  (pos_embed): PosEmbed()\n",
+       "  (blocks): ModuleList(\n",
+       "    (0-11): 12 x TransformerBlock(\n",
+       "      (ln1): LayerNorm(\n",
+       "        (scale_factor): Nneuron(param_shape=(1, 9, 1))\n",
+       "        (normalized): Nneuron(param_shape=(1, 9, 768))\n",
+       "      )\n",
+       "      (ln2): LayerNorm(\n",
+       "        (scale_factor): Nneuron(param_shape=(1, 9, 1))\n",
+       "        (normalized): Nneuron(param_shape=(1, 9, 768))\n",
+       "      )\n",
+       "      (attn): Attention(\n",
+       "        (k): Nneuron(param_shape=(1, 9, 12, 64))\n",
+       "        (q): Nneuron(param_shape=(1, 9, 12, 64))\n",
+       "        (v): Nneuron(param_shape=(1, 9, 12, 64))\n",
+       "        (z): Nneuron(param_shape=(1, 9, 12, 64))\n",
+       "        (attn_scores): Nneuron(param_shape=(1, 12, 9, 9))\n",
+       "        (pattern): Nneuron(param_shape=(1, 12, 9, 9))\n",
+       "        (result): Nneuron(param_shape=None)\n",
+       "      )\n",
+       "      (mlp): MLP()\n",
+       "    )\n",
+       "  )\n",
+       "  (ln_final): LayerNorm(\n",
+       "    (scale_factor): Nneuron(param_shape=(1, 9, 1))\n",
+       "    (normalized): Nneuron(param_shape=(1, 9, 768))\n",
+       "  )\n",
+       "  (unembed): Unembed()\n",
+       ")"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +299,55 @@
     "for t in invoker.output[0].softmax(-1).argmax(-1):\n",
     "    out = tokenizer.decode(t)\n",
     "    print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPT2LMHeadModel(\n",
+       "  (transformer): GPT2Model(\n",
+       "    (wte): Embedding(50257, 768)\n",
+       "    (wpe): Embedding(1024, 768)\n",
+       "    (drop): Dropout(p=0.1, inplace=False)\n",
+       "    (h): ModuleList(\n",
+       "      (0-11): 12 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attn): GPT2AttentionAltered(\n",
+       "          (c_attn): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (query): WrapperModule()\n",
+       "          (key): WrapperModule()\n",
+       "          (value): WrapperModule()\n",
+       "        )\n",
+       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (mlp): GPT2MLP(\n",
+       "          (c_fc): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (act): NewGELUActivation()\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ground_truth"
    ]
   }
  ],
