--- a/break_transformerlens/test.ipynb
+++ b/break_transformerlens/test.ipynb
@@ -31,9 +31,9 @@
     "device = \"cuda:0\"\n",
     "n_devices = 1\n",
     "dtype = t.float32\n",
-    "default_prepend_bos = False\n",
+    "default_prepend_bos = True\n",
     "\n",
-    "official_model_name = \"gpt2\"\n",
+    "official_model_name = \"EleutherAI/pythia-1B\"\n",
     "\n",
     "cfg = loading.get_pretrained_model_config(\n",
     "        official_model_name,\n",
@@ -70,7 +70,7 @@
    "source": [
     "import nnsight\n",
     "\n",
-    "nnmodel = nnsight.LanguageModel(\"gpt2\", device_map=\"cuda:0\")\n",
+    "nnmodel = nnsight.LanguageModel(\"EleutherAI/pythia-1B\", device_map=\"cuda:0\")\n",
     "tokenizer = nnmodel.tokenizer"
    ]
   },
@@ -109,7 +109,7 @@
     "    center_writing_weights=center_writing_weights,\n",
     "    center_unembed=center_unembed,\n",
     "    fold_value_biases=fold_value_biases,\n",
-    "    refactor_factored_attn_matrices=True,\n",
+    "    refactor_factored_attn_matrices=refactor_factored_attn_matrices,\n",
     ")"
    ]
   },
@@ -132,9 +132,8 @@
       "text/plain": [
        "UnifiedTransformer(\n",
        "  (embed): Embed()\n",
-       "  (pos_embed): PosEmbed()\n",
        "  (blocks): ModuleList(\n",
-       "    (0-11): 12 x TransformerBlock(\n",
+       "    (0-15): 16 x TransformerBlock(\n",
        "      (ln1): LayerNorm(\n",
        "        (scale_factor): Nneuron(param_shape=None)\n",
        "        (normalized): Nneuron(param_shape=None)\n",
@@ -151,6 +150,8 @@
        "        (attn_scores): Nneuron(param_shape=None)\n",
        "        (pattern): Nneuron(param_shape=None)\n",
        "        (result): Nneuron(param_shape=None)\n",
+       "        (rot_k): Nneuron(param_shape=None)\n",
+       "        (rot_q): Nneuron(param_shape=None)\n",
        "      )\n",
        "      (mlp): MLP()\n",
        "    )\n",
@@ -174,37 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moving model to device:  meta\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[  198, 35143,   293,   198,   257,   262,  3504,   286,  2986]],\n",
+      "Moving model to device:  meta\n",
+      "tensor([[  806, 17842,   282,   310,   247,   253,  1232,  4055,  5003]],\n",
       "       device='cuda:0')\n",
-      "\n",
-      " Shuttlele\n",
-      " a the middle of San\n"
+      " first Betweenle is a the process center San\n"
      ]
     }
    ],
    "source": [
     "nnsight_model = nnsight.LanguageModel(model, tokenizer=tokenizer, device_map=\"cuda:0\")\n",
+    "\n",
     "\n",
     "with nnsight_model.invoke(\"The Space Needle is in the city of\") as invoker:\n",
     "    pass\n",
@@ -217,137 +204,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "UnifiedTransformer(\n",
-       "  (embed): Embed()\n",
-       "  (pos_embed): PosEmbed()\n",
-       "  (blocks): ModuleList(\n",
-       "    (0-11): 12 x TransformerBlock(\n",
-       "      (ln1): LayerNorm(\n",
-       "        (scale_factor): Nneuron(param_shape=(1, 9, 1))\n",
-       "        (normalized): Nneuron(param_shape=(1, 9, 768))\n",
-       "      )\n",
-       "      (ln2): LayerNorm(\n",
-       "        (scale_factor): Nneuron(param_shape=(1, 9, 1))\n",
-       "        (normalized): Nneuron(param_shape=(1, 9, 768))\n",
-       "      )\n",
-       "      (attn): Attention(\n",
-       "        (k): Nneuron(param_shape=(1, 9, 12, 64))\n",
-       "        (q): Nneuron(param_shape=(1, 9, 12, 64))\n",
-       "        (v): Nneuron(param_shape=(1, 9, 12, 64))\n",
-       "        (z): Nneuron(param_shape=(1, 9, 12, 64))\n",
-       "        (attn_scores): Nneuron(param_shape=(1, 12, 9, 9))\n",
-       "        (pattern): Nneuron(param_shape=(1, 12, 9, 9))\n",
-       "        (result): Nneuron(param_shape=None)\n",
-       "      )\n",
-       "      (mlp): MLP()\n",
-       "    )\n",
-       "  )\n",
-       "  (ln_final): LayerNorm(\n",
-       "    (scale_factor): Nneuron(param_shape=(1, 9, 1))\n",
-       "    (normalized): Nneuron(param_shape=(1, 9, 768))\n",
-       "  )\n",
-       "  (unembed): Unembed()\n",
-       ")"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[  198, 35143,   293,   198,   257,   262,  3504,   286,  2986]],\n",
+      "tensor([[  806, 17842,   282,   310,   247,   253,  1232,  4055,  5003]],\n",
       "       device='cuda:0')\n",
-      "\n",
-      " Shuttlele\n",
-      " a the middle of San\n"
+      " first Betweenle is a the process center San\n"
      ]
     }
    ],
    "source": [
-    "ground_truth = nnsight.LanguageModel(\"gpt2\", device_map=\"cuda:0\")\n",
-    "\n",
-    "with ground_truth.invoke(\"The Space Needle is in the city of\") as invoker:\n",
+    "with nnmodel.invoke(\"The Space Needle is in the city of\") as invoker:\n",
     "    pass\n",
     "\n",
     "print(invoker.output[0].softmax(-1).argmax(-1))\n",
     "for t in invoker.output[0].softmax(-1).argmax(-1):\n",
     "    out = tokenizer.decode(t)\n",
     "    print(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GPT2LMHeadModel(\n",
-       "  (transformer): GPT2Model(\n",
-       "    (wte): Embedding(50257, 768)\n",
-       "    (wpe): Embedding(1024, 768)\n",
-       "    (drop): Dropout(p=0.1, inplace=False)\n",
-       "    (h): ModuleList(\n",
-       "      (0-11): 12 x GPT2Block(\n",
-       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (attn): GPT2AttentionAltered(\n",
-       "          (c_attn): Conv1D()\n",
-       "          (c_proj): Conv1D()\n",
-       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
-       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
-       "          (query): WrapperModule()\n",
-       "          (key): WrapperModule()\n",
-       "          (value): WrapperModule()\n",
-       "        )\n",
-       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        (mlp): GPT2MLP(\n",
-       "          (c_fc): Conv1D()\n",
-       "          (c_proj): Conv1D()\n",
-       "          (act): NewGELUActivation()\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ground_truth"
    ]
   }
  ],
